Cleaned up changes in RollupRepository

--- a/rollup/core/classes/RollupRepository.cls
+++ b/rollup/core/classes/RollupRepository.cls
@@ -12,6 +12,8 @@ public without sharing class RollupRepository implements RollupLogger.ToStringOb
     set;
   }
 
+  private Boolean shouldLog = true;
+
   private class Args {
     public final Map<String, Object> bindVars = new Map<String, Object>();
     public String query;
@@ -92,144 +94,98 @@ public without sharing class RollupRepository implements RollupLogger.ToStringOb
   public static List<Rollup__mdt> getRollupMetadata() {
     List<Rollup__mdt> matchingMetadata;
 
-    if (Rollup.getDefaultControl()?.ShouldOptimizeCMDTQueries__c == true) {
-      // Optimized query using text fields instead of FieldDefinition relationships
-      matchingMetadata = [
-        SELECT
-          MasterLabel,
-          DeveloperName,
-          // Use text fields for better performance
-          LookupObjectText__c,
-          CalcItemText__c,
-          RollupFieldOnCalcItemText__c,
-          LookupFieldOnCalcItemText__c,
-          LookupFieldOnLookupObjectText__c,
-          RollupFieldOnLookupObjectText__c,
-          UltimateParentLookupText__c,
-          // rest of the fields
-          CalcItemWhereClause__c,
-          ChangedFieldsOnCalcItem__c,
-          ConcatDelimiter__c,
-          CurrencyFieldMapping__c,
-          FullRecalculationDefaultNumberValue__c,
-          FullRecalculationDefaultStringValue__c,
-          GrandparentRelationshipFieldPath__c,
-          GroupByFields__c,
-          GroupByRowEndDelimiter__c,
-          GroupByRowStartDelimiter__c,
-          IsDisabled__c,
-          IsDistinct__c,
-          IsFullRecordSet__c,
-          IsRollupStartedFromParent__c,
-          IsTableFormatted__c,
-          LimitAmount__c,
-          OneToManyGrandparentFields__c,
-          OrderByFirstLast__c,
-          RollupControl__c,
-          RollupOperation__c,
-          RollupToUltimateParent__c,
-          SharingMode__c,
-          ShouldRunWithoutCustomSettingEnabled__c,
-          SplitConcatDelimiterOnCalcItem__c,
-          (SELECT Id, DeveloperName, FieldName__c, NullSortOrder__c, Ranking__c, SortOrder__c FROM RollupOrderBys__r),
-          RollupGrouping__r.Id,
-          RollupGrouping__r.RollupOperation__c
-        FROM Rollup__mdt
-        WHERE RollupControl__r.ShouldAbortRun__c = FALSE AND IsDisabled__c = FALSE
-        ORDER BY LookupObject__c
-      ];
-      // do the transforms for optimized query
-      for (Rollup__mdt meta : matchingMetadata) {
-        meta.CalcItem__c = meta.CalcItemText__c;
-        meta.LookupFieldOnCalcItem__c = meta.LookupFieldOnCalcItemText__c;
-        meta.LookupFieldOnLookupObject__c = meta.LookupFieldOnLookupObjectText__c;
-        meta.RollupFieldOnCalcItem__c = meta.RollupFieldOnCalcItemText__c;
-        meta.RollupFieldOnLookupObject__c = meta.RollupFieldOnLookupObjectText__c;
-        meta.LookupObject__c = meta.LookupObjectText__c;
-        meta.UltimateParentLookup__c = meta.UltimateParentLookupText__c;
+    List<String> selectFields = new List<String>{
+      '(SELECT Id, DeveloperName, FieldName__c, NullSortOrder__c, Ranking__c, SortOrder__c FROM RollupOrderBys__r)',
+      'RollupGrouping__r.Id',
+      'RollupGrouping__r.RollupOperation__c',
+      Rollup__mdt.CalcItem__c.toString(),
+      Rollup__mdt.CalcItemText__c.toString(),
+      Rollup__mdt.CalcItemWhereClause__c.toString(),
+      Rollup__mdt.ChangedFieldsOnCalcItem__c.toString(),
+      Rollup__mdt.ConcatDelimiter__c.toString(),
+      Rollup__mdt.CurrencyFieldMapping__c.toString(),
+      Rollup__mdt.DeveloperName.toString(),
+      Rollup__mdt.FullRecalculationDefaultNumberValue__c.toString(),
+      Rollup__mdt.FullRecalculationDefaultStringValue__c.toString(),
+      Rollup__mdt.GrandparentRelationshipFieldPath__c.toString(),
+      Rollup__mdt.GroupByFields__c.toString(),
+      Rollup__mdt.GroupByRowEndDelimiter__c.toString(),
+      Rollup__mdt.GroupByRowStartDelimiter__c.toString(),
+      Rollup__mdt.IsDisabled__c.toString(),
+      Rollup__mdt.IsDistinct__c.toString(),
+      Rollup__mdt.IsFullRecordSet__c.toString(),
+      Rollup__mdt.IsRollupStartedFromParent__c.toString(),
+      Rollup__mdt.IsTableFormatted__c.toString(),
+      Rollup__mdt.LimitAmount__c.toString(),
+      Rollup__mdt.LookupFieldOnCalcItem__c.toString(),
+      Rollup__mdt.LookupFieldOnCalcItemText__c.toString(),
+      Rollup__mdt.LookupFieldOnLookupObject__c.toString(),
+      Rollup__mdt.LookupFieldOnLookupObjectText__c.toString(),
+      Rollup__mdt.LookupObject__c.toString(),
+      Rollup__mdt.LookupObjectText__c.toString(),
+      Rollup__mdt.MasterLabel.toString(),
+      Rollup__mdt.OneToManyGrandparentFields__c.toString(),
+      Rollup__mdt.OrderByFirstLast__c.toString(),
+      Rollup__mdt.RollupControl__c.toString(),
+      Rollup__mdt.RollupFieldOnCalcItem__c.toString(),
+      Rollup__mdt.RollupFieldOnCalcItemText__c.toString(),
+      Rollup__mdt.RollupFieldOnLookupObject__c.toString(),
+      Rollup__mdt.RollupFieldOnLookupObjectText__c.toString(),
+      Rollup__mdt.RollupOperation__c.toString(),
+      Rollup__mdt.RollupToUltimateParent__c.toString(),
+      Rollup__mdt.SharingMode__c.toString(),
+      Rollup__mdt.ShouldRunWithoutCustomSettingEnabled__c.toString(),
+      Rollup__mdt.SplitConcatDelimiterOnCalcItem__c.toString(),
+      Rollup__mdt.UltimateParentLookup__c.toString(),
+      Rollup__mdt.UltimateParentLookupText__c.toString()
+    };
 
-        meta.GroupByRowEndDelimiter__c = meta.GroupByRowEndDelimiter__c?.unescapeJava();
-        meta.GroupByRowStartDelimiter__c = meta.GroupByRowStartDelimiter__c?.unescapeJava();
-        meta.SharingMode__c = meta.SharingMode__c ?? RollupMetaPicklists.SharingMode.SystemLevel;
-      }
-    } else {
-      // Standard query with FieldDefinition relationships (existing behavior)
-      matchingMetadata = [
-        SELECT
-          MasterLabel,
-          DeveloperName,
-          LookupObject__c,
-          LookupObjectText__c,
-          LookupObject__r.QualifiedApiName,
-          CalcItem__c,
-          CalcItemText__c,
-          CalcItem__r.QualifiedApiName,
-          RollupFieldOnCalcItem__c,
-          RollupFieldOnCalcItemText__c,
-          RollupFieldOnCalcItem__r.QualifiedApiName,
-          LookupFieldOnCalcItem__c,
-          LookupFieldOnCalcItemText__c,
-          LookupFieldOnCalcItem__r.QualifiedApiName,
-          LookupFieldOnLookupObject__c,
-          LookupFieldOnLookupObjectText__c,
-          LookupFieldOnLookupObject__r.QualifiedApiName,
-          RollupFieldOnLookupObject__c,
-          RollupFieldOnLookupObjectText__c,
-          RollupFieldOnLookupObject__r.QualifiedApiName,
-          UltimateParentLookup__c,
-          UltimateParentLookup__r.QualifiedApiName,
-          CalcItemWhereClause__c,
-          ChangedFieldsOnCalcItem__c,
-          ConcatDelimiter__c,
-          CurrencyFieldMapping__c,
-          FullRecalculationDefaultNumberValue__c,
-          FullRecalculationDefaultStringValue__c,
-          GrandparentRelationshipFieldPath__c,
-          GroupByFields__c,
-          GroupByRowEndDelimiter__c,
-          GroupByRowStartDelimiter__c,
-          IsDisabled__c,
-          IsDistinct__c,
-          IsFullRecordSet__c,
-          IsRollupStartedFromParent__c,
-          IsTableFormatted__c,
-          LimitAmount__c,
-          OneToManyGrandparentFields__c,
-          OrderByFirstLast__c,
-          RollupControl__c,
-          RollupOperation__c,
-          RollupToUltimateParent__c,
-          SharingMode__c,
-          ShouldRunWithoutCustomSettingEnabled__c,
-          SplitConcatDelimiterOnCalcItem__c,
-          (SELECT Id, DeveloperName, FieldName__c, NullSortOrder__c, Ranking__c, SortOrder__c FROM RollupOrderBys__r),
-          RollupGrouping__r.Id,
-          RollupGrouping__r.RollupOperation__c
-        FROM Rollup__mdt
-        WHERE RollupControl__r.ShouldAbortRun__c = FALSE AND IsDisabled__c = FALSE
-        ORDER BY LookupObject__c
-      ];
-      // do the transforms for standard query
-      for (Rollup__mdt meta : matchingMetadata) {
-        meta.CalcItem__c = meta.CalcItem__r.QualifiedApiName ?? meta.CalcItemText__c;
-        meta.LookupFieldOnCalcItem__c = meta.LookupFieldOnCalcItem__r.QualifiedApiName ?? meta.LookupFieldOnCalcItemText__c;
-        meta.LookupFieldOnLookupObject__c = meta.LookupFieldOnLookupObject__r.QualifiedApiName ?? meta.LookupFieldOnLookupObjectText__c;
-        meta.RollupFieldOnCalcItem__c = meta.RollupFieldOnCalcItem__r.QualifiedApiName ?? meta.RollupFieldOnCalcItemText__c;
-        meta.RollupFieldOnLookupObject__c = meta.RollupFieldOnLookupObject__r.QualifiedApiName ?? meta.RollupFieldOnLookupObjectText__c;
-        meta.LookupObject__c = meta.LookupObject__r.QualifiedApiName ?? meta.LookupObjectText__c;
-        meta.UltimateParentLookup__c = meta.UltimateParentLookup__r.QualifiedApiName ?? meta.UltimateParentLookupText__c;
+    if (Rollup.getDefaultControl()?.ShouldOptimizeCMDTQueries__c != true) {
+      selectFields.addAll(
+        new List<String>{
+          'LookupObject__r.QualifiedApiName',
+          'CalcItem__r.QualifiedApiName',
+          'RollupFieldOnCalcItem__r.QualifiedApiName',
+          'LookupFieldOnCalcItem__r.QualifiedApiName',
+          'LookupFieldOnLookupObject__r.QualifiedApiName',
+          'RollupFieldOnLookupObject__r.QualifiedApiName',
+          'UltimateParentLookup__r.QualifiedApiName'
+        }
+      );
+    }
 
-        meta.GroupByRowEndDelimiter__c = meta.GroupByRowEndDelimiter__c?.unescapeJava();
-        meta.GroupByRowStartDelimiter__c = meta.GroupByRowStartDelimiter__c?.unescapeJava();
-        meta.SharingMode__c = meta.SharingMode__c ?? RollupMetaPicklists.SharingMode.SystemLevel;
-      }
+    matchingMetadata = new RollupRepository(RollupRepository.RunAsMode.SYSTEM_LEVEL)
+      .setQuery('SELECT ' + String.join(selectFields, ',\n') + '\nFROM Rollup__mdt\nWHERE RollupControl__r.ShouldAbortRun__c = FALSE AND IsDisabled__c = FALSE')
+      .setShouldLog(false)
+      .get();
+
+    // do the transforms for standard query
+    for (Rollup__mdt meta : matchingMetadata) {
+      meta.CalcItem__c = meta.CalcItemText__c ?? meta.CalcItem__r.QualifiedApiName;
+      meta.LookupObject__c = meta.LookupObjectText__c ?? meta.LookupObject__r.QualifiedApiName;
+      meta.LookupFieldOnCalcItem__c = meta.LookupFieldOnCalcItemText__c ?? meta.LookupFieldOnCalcItem__r.QualifiedApiName;
+      meta.LookupFieldOnLookupObject__c = meta.LookupFieldOnLookupObjectText__c ?? meta.LookupFieldOnLookupObject__r.QualifiedApiName;
+      meta.RollupFieldOnCalcItem__c = meta.RollupFieldOnCalcItemText__c ?? meta.RollupFieldOnCalcItem__r.QualifiedApiName;
+      meta.RollupFieldOnLookupObject__c = meta.RollupFieldOnLookupObjectText__c ?? meta.RollupFieldOnLookupObject__r.QualifiedApiName;
+      meta.UltimateParentLookup__c = meta.UltimateParentLookupText__c ?? meta.UltimateParentLookup__r.QualifiedApiName;
+
+      meta.GroupByRowEndDelimiter__c = meta.GroupByRowEndDelimiter__c?.unescapeJava();
+      meta.GroupByRowStartDelimiter__c = meta.GroupByRowStartDelimiter__c?.unescapeJava();
+      meta.SharingMode__c = meta.SharingMode__c ?? RollupMetaPicklists.SharingMode.SystemLevel;
     }
 
     return matchingMetadata;
   }
 
   private void createQueryLog(String message) {
-    RollupLogger.Instance.Log(message, this, System.LoggingLevel.DEBUG);
+    if (this.shouldLog) {
+      RollupLogger.Instance.Log(message, this, System.LoggingLevel.DEBUG);
+    }
+  }
+
+  private RollupRepository setShouldLog(Boolean shouldLog) {
+    this.shouldLog = shouldLog;
+    return this;
   }
 
   private System.AccessLevel transformPermissionLevel(RunAsMode currentRunAs) {
