Trims down RollupRepository query and adds additional logging for no-op scenarios and finalizer start/finish

--- a/extra-tests/classes/RollupTests.cls
+++ b/extra-tests/classes/RollupTests.cls
@@ -3082,7 +3082,7 @@ private class RollupTests {
       )
       .runCalc();
 
-    Assert.areEqual('no-op', rollupResponse);
+    Assert.areEqual('No matching rollups to process', rollupResponse);
   }
 
   @IsTest
