Updated fully to ESLint 9 syntax and sf code-analyzer syntax. Fixed up a few misspelled rules and missed scan violations

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -597,6 +597,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     return batch(processors, localInvokePoint);
   }
 
+  @SuppressWarnings('PMD.ApexCRUDViolation')
   @AuraEnabled
   global static String getBatchRollupStatus(String jobId) {
     String jobStatus = [SELECT Status FROM AsyncApexJob WHERE Id = :jobId LIMIT 1]?.Status;
