--- a/rollup/core/classes/RollupFlowRecalculator.cls
+++ b/rollup/core/classes/RollupFlowRecalculator.cls
@@ -1,3 +1,4 @@
+@SuppressWarnings('PMD.AvoidGlobalModifier')
 global without sharing class RollupFlowRecalculator {
   @InvocableMethod(category='Rollups' label='Full Recalc Comma-Separated Parent API Names')
   global static List<Rollup.FlowOutput> performFullRecalcRollups(List<RollupFlowFullRecalcDispatcher.FlowInput> inputs) {
