Fixes a potential NPE when conductors/cabooses are accessing finalizers during full recalcs

--- a/rollup/core/classes/RollupFullRecalcProcessor.cls
+++ b/rollup/core/classes/RollupFullRecalcProcessor.cls
@@ -83,6 +83,7 @@ global abstract without sharing class RollupFullRecalcProcessor extends RollupAs
         conductor.storeUniqueParentFields(meta);
       }
       for (RollupFullRecalcProcessor caboose : this.cabooses) {
+        conductor.finalizer = conductor.finalizer ?? this.finalizer;
         conductor.finalizer.addCaboose(caboose);
       }
       if (this.isBatch()) {
